# farm-stack-web-app-server

./: docker-compose.yml  pyproject.toml
